[project]
name = "garth-mcp-server"
dynamic = ["version"]
description = "Garmin Connect MCP server"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Matin Tamizi", email = "mtamizi@duck.com"},
]
dependencies = [
    "garth>=0.5.14,<0.6.0",
    "fastmcp>=0.1.0",
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["garmin", "garmin connect", "mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/garth_mcp_server/__init__.py"



[project.optional-dependencies]
dev = [
    "ipython",
    "ipdb",
    "ipykernel",
    "mcp[cli]",
]
linting = [
    "ruff",
    "mypy",
    "types-requests",
]
